--- a/Plant/Plant.csproj
+++ b/Plant/Plant.csproj
@@ -26,6 +26,8 @@
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Models\" />
+    <Folder Include="wwwroot\image\listProduct\" />
+    <Folder Include="wwwroot\image\product\" />
   </ItemGroup>
 
 </Project>
