--- a/Plant/appsettings.json
+++ b/Plant/appsettings.json
@@ -10,5 +10,15 @@
     "plantConnectString": "Data Source=.;Initial Catalog=plant;Integrated Security=True",
     "PlantContextConnection": "Data Source=.;Initial Catalog=plant;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "VnPay": {
+    "TmnCode": "3KOPBWPE",
+    "HashSecret": "XNPUSBGZYXFLYHLODAMQHWENRMUHYRZU",
+    "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
+    "Version": "2.1.0",
+    "Command": "pay",
+    "CurrCode": "VND",
+    "Locale": "vn",
+    "PaymentBackReturnUrl": "https://localhost:44349/Orders/PaymentCallBack"
+  },
   "AllowedHosts": "*"
 }
