update_name_database

--- a/Plant/appsettings.json
+++ b/Plant/appsettings.json
@@ -7,8 +7,8 @@
     }
   },
   "ConnectionStrings": {
-    "plantConnectString": "Data Source=.;Initial Catalog=plant;Integrated Security=True",
-    "PlantContextConnection": "Data Source=.;Initial Catalog=plant;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "plantConnectString": "Data Source=.;Initial Catalog=Bamboo;Integrated Security=True",
+    "PlantContextConnection": "Data Source=.;Initial Catalog=Bamboo;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "VnPay": {
     "TmnCode": "3KOPBWPE",
