--- a/Plant/appsettings.json
+++ b/Plant/appsettings.json
@@ -7,8 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "plantConnectString": "Data Source=.;Initial Catalog=Bamboo;Integrated Security=True",
-    "PlantContextConnection": "Data Source=.;Initial Catalog=Bamboo;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "PlantConnectDb": "Data Source=SQL8004.site4now.net;Initial Catalog=db_aaaf0c_bamboo;User Id=db_aaaf0c_bamboo_admin;Password=linh692001"
   },
   "VnPay": {
     "TmnCode": "3KOPBWPE",
